// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormattedDisplayName /> accepts Intl.DisplayNames options 1`] = `
<div>
  <span
    data-testid="comp"
  >
    Chinese Yuan
  </span>
</div>
`;

exports[`<FormattedDisplayName /> renders an empty <> when the underlying DisplayNames would return undefined 1`] = `
<div>
  <span
    data-testid="comp"
  />
</div>
`;
